tests/miniJava/neg/000054_mutation.MiniJava
class java { else static void Main ( String [ ] java ) { { } } }
